--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "lucide-react": "^0.561.0",
     "react-dom": "^19.2.3",
-    "@google/generative-ai": "^0.21.0",
+    "@google/genai": "^1.33.0",
     "react": "^19.2.3"
   },
   "devDependencies": {
